# solana-accountsdb-plugin-kafka

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  example-config.json
src/: common.rs  config.rs  kafka.rs  lib.rs  plugin.rs  prom.rs  publisher.rs
src/common/: account.rs  block.rs  mod.rs  transaction.rs
