[package]
name = "solana-indexer"
description = "Solana AccountsDb plugin for Kafka"
authors = ["hsyndeniz"]
version = "1.0.0"
edition = "2021"
repository = "https://github.com/hsyndeniz/solana-indexer"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = { version = "1.16.10" }
solana-logger = { version = "1.16.10" }
solana-measure = { version = "1.16.10" }
solana-metrics = { version = "1.16.10" }
solana-runtime = { version = "1.16.10" }
solana-program = { version = "1.16.10" }
solana-account-decoder = { version = "1.16.10" }
solana-transaction-status = { version = "1.16.10" }
solana-geyser-plugin-interface = { version = "1.16.10" }

log = "*"
prost = "*"
lazy_static = { version = "1.4.0" }
serde_json = { version = "1.0.105" }
serde_derive = { version = "1.0.188" }
serde = { version = "1.0.188", features = ["derive"] }
hyper = { version = "0.14.27", features = ["server"] }
rdkafka = { version = "0.33.2", features = ["ssl", "sasl"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros", "sync"] }

openssl = { version = "0.10.57" }
thiserror = { version = "1.0.47" }
tokio-postgres = { version = "0.7.10" }
postgres-openssl = { version = "0.5.0" }
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"] }

bs58 = { version = "0.5.0" }
bytemuck = { version = "1.13.1" }
crossbeam-channel = { version = "0.5.8" }
chrono = { version = "0.4.26", features = ["serde"] }

avro-rs = { version = "0.13.0" }
apache-avro = { version = "0.15.0", features = ["snappy"] }

[build-dependencies]
prost-build = "*"
anyhow = "1.0.75"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "8.2.4", features = ["build", "rustc"] }

[dev-dependencies]
libc = "0.2.147"
tempfile = "3.8.0"
libloading = "0.8.0"
serial_test = "2.0.0"
socket2 = { version = "0.5.3", features = ["all"] }

# solana-local-cluster = { version = "1.16.8" }
# solana-net-utils = { version = "1.16.8" }
# solana-streamer = { version = "1.16.8" }
# solana-core = { version = "1.16.8" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
